# persea

./: .pre-commit-config.yaml  README.md  pyproject.toml
doc/: avocado.md  commands.md  flow.md  hatch_instructions.md
src/persea/: __about__.py  __init__.py  __main__.py  connection.py  palta.py
src/persea/cli/: __init__.py
tests/: __init__.py
