[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persea"
dynamic = ["version"]
description = 'Avocado Framework POC'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Miguel Bernal Marin", email = "miguel.bernal.marin@linux.intel.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "paramiko",
  "avocado-framework",
  "avocado-framework-plugin-result-html",
]

[project.urls]
Documentation = "https://github.com/miguelinux/persea#readme"
Issues = "https://github.com/miguelinux/persea/issues"
Source = "https://github.com/miguelinux/persea"

[project.scripts]
persea = "persea.cli:persea"

[tool.hatch.version]
path = "src/persea/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/persea tests}"

[tool.coverage.run]
source_pkgs = ["persea", "tests"]
branch = true
parallel = true
omit = [
  "src/persea/__about__.py",
]

[tool.coverage.paths]
persea = ["src/persea", "*/persea/src/persea"]
tests = ["tests", "*/persea/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
